--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,155 @@
     transform: rotate(360deg);
   }
 }
+.homepage-bigi{
+  font-family: Mulish,sans-serif;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+.header-component-H {
+  margin: 17px;
+  padding: 8px;
+  font-size: 24px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+.card-component{
+  font-size: 20px;
+  
+   padding-bottom: 30px;
+  
+  display: inline-block;
+  width: 84%;
+
+  
+}
+
+.table-div{
+  border-top-width: 21px;
+  margin-left: 0px;
+  display: inline-block;
+}
+
+
+.table-component,th, td {
+  margin: 0px;
+  padding: 10px;
+  /* text-align:center; */
+   
+}
+
+td {
+  
+  
+  padding-bottom: 15px;
+  padding-left: 99px;
+  padding-right: 54px;
+}
+  
+
+
+
+
+ /* .btn{
+  display: inline-block;
+  float: right;
+  margin: 60px;
+  text-align: center;
+
+padding-bottom: 10px;
+padding-left: 4px;
+padding-right: 5px;
+margin-right: 55px;
+border-radius: 17px;
+background-color: orangered;
+color: white; 
+  
+} */
+
+.main-component{
+  width: 100%;
+  height: 100%;
+}
+
+.header-component{
+  margin: 20px;
+  padding: 20px;
+  font-size: 35px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.info-left{
+  
+  width: 600px;
+  height: 400px;
+  display: inline-block;
+  float: left;
+  margin: 106px;
+  padding: 20px;
+  text-align: center;
+  align-items: center;
+  font-size: 25px;
+  list-style-type: none;
+  border-radius: 10px;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+.info-right{
+ 
+  width: 600px;
+  height: 400px;
+  display: inline-block;
+  margin: 106px;
+  padding: 20px;
+  align-items: center;
+  font-size: 25px;
+  list-style-type: none;
+  border-radius: 10px;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+
+
+
+
+/* CSS */
+.button-23 {
+  background-color: #FFFFFF;
+  border: 1px solid #222222;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #222222;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  padding: 13px 23px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  touch-action: manipulation;
+  transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
+  user-select: none;
+  -webkit-user-select: none;
+  width: auto;
+}
+
+.button-23:focus-visible {
+  box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
+  transition: box-shadow .2s;
+}
+
+.button-23:active {
+  background-color: #F7F7F7;
+  border-color: #000000;
+  transform: scale(.96);
+}
+
+.button-23:disabled {
+  border-color: #DDDDDD;
+  color: #DDDDDD;
+  cursor: not-allowed;
+  opacity: 1;
+}
